// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package Debugger.SbUnixSignalsRpc;

import "Common.proto";

service SbUnixSignalsRpcService {
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
  }
  rpc GetShouldStop(GetShouldStopRequest) returns (GetShouldStopResponse) {
  }
  rpc SetShouldStop(SetShouldStopRequest) returns (SetShouldStopResponse) {
  }
}

message DeleteRequest {
  Common.GrpcSbUnixSignals signals = 1;
}

message DeleteResponse {
}

message GetShouldStopRequest {
  Common.GrpcSbUnixSignals signals = 1;
  int32 signalNumber = 2;
}

message GetShouldStopResponse {
  bool shouldStop = 1;
}

message SetShouldStopRequest {
  Common.GrpcSbUnixSignals signals = 1;
  int32 signalNumber = 2;
  bool value = 3;
}

message SetShouldStopResponse {
  bool result = 1;
}